@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <title>Message Bot</title>
 </head>
 <body>
@@ -74,7 +75,7 @@
                         <input name="amount" id="amount" class="pure-input-1-4" type="number" min="1" max="10">
                     </div>
             </div>
-            
+            <div class="g-recaptcha" data-sitekey="6LcR5S8UAAAAAG3eyAQ1xFpvSVeIliOtoKcnEuZ4" data-callback="enableButton"></div>
             <div id="submitContainer">
                 <button id="submit" type="submit" class="pure-button pure-button-primary" data-loading-text="Sending...">Send Messages</button>
             </div>
